--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section class="home" id="home">
         <header>
             <div class="nav">
-                <a href="#home"><img src="gambar/Logo1.png"></a>
+                <a href="#home"><img src="Logo1.png"></a>
                 <ul>
                     <a href="#home"><li>Home</li></a>
                     <a href="#me"><li>About Me</li></a>
@@ -57,28 +57,28 @@
                     <table>
                         <tr>
                             <td>
-                                <img src="/gambar/1.png">
+                                <img src="1.png">
                                 <p>Koiboard Website</p>
                             </td>
 
                             <td style="padding: 1vw;"></td>
 
                             <td>
-                                <img src="/gambar/2.png">
+                                <img src="2.png">
                                 <p>Food Website</p>
                             </td>
                         </tr>
 
                         <tr>
                             <td>
-                                <img src="/gambar/3.png">
+                                <img src="3.png">
                                 <p>Menu Website</p>
                             </td>
 
                             <td style="padding: 1vw;"></td>
 
                             <td>
-                                <img src="/gambar/aaa.png">
+                                <img src="aaa.png">
                                 <p>My Drawing</p>
                             </td>
                         </tr> 
